--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-alkaloid (3.0.0~ppa1) oneiric; urgency=low
+music-controller (3.0.0~ppa1) oneiric; urgency=low
 
   * create deb package for ubuntu 11.10
 
