update lang files. remove close menu. close event is same as hide(mac) or quit(gtk)

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -11,9 +11,13 @@ msgid "Rescan Library"
 msgstr "ライブラリを再読み込み"
 msgid "Quit"
 msgstr "終了"
+msgid "Close"
+msgstr "閉じる"
 
 msgid "Edit"
 msgstr "編集"
+msgid "Select All"
+msgstr "すべてを選択"
 msgid "Preferences"
 msgstr "設定"
 
