add website menu.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -59,6 +59,8 @@ msgid "Help"
 msgstr "ヘルプ"
 msgid "About"
 msgstr "MusicControllerについて"
+msgid "MusicController Website"
+msgstr "MusicController ウェブサイト"
 
 msgid "Connection"
 msgstr "接続"
