fix bug: sometimes songinfo get null data.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -89,6 +89,10 @@ msgid "Edit..."
 msgstr "編集..."
 msgid "Download..."
 msgstr "ダウンロード..."
+msgid "Edit Lyric: %s"
+msgstr "歌詞を編集: %s"
+msgid "Download Lyric: %s"
+msgstr "歌詞をダウンロード: %s"
 msgid "Save"
 msgstr "保存"
 msgid "Text"
