add preferences connection dialog to current connection status.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -72,6 +72,10 @@ msgid "Port"
 msgstr "ポート"
 msgid "Password"
 msgstr "パスワード"
+msgid "Connected %s:%s"
+msgstr "%s:%s に接続しています"
+msgid "Not Connected"
+msgstr "接続していません"
 msgid "Connect"
 msgstr "接続する"
 msgid "Lyrics"
