fix stats dialog. support i18n and change default text.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -61,6 +61,27 @@ msgid "About"
 msgstr "MusicControllerについて"
 msgid "MusicController Website"
 msgstr "MusicController ウェブサイト"
+msgid "Server Stats"
+msgstr "サーバーの統計情報"
+
+msgid "%i days %i hours %i minutes %i seconds"
+msgstr "%i日 %i時間 %i分 %i秒"
+msgid "%(day)s, %(month)s, %(year)s"
+msgstr "%(year)s年 %(month)s月 %(day)s日"
+msgid "Number of Artists"
+msgstr"アーティスト数"
+msgid "Number of Albums"
+msgstr"アルバム数"
+msgid "Number of Songs"
+msgstr"曲数"
+msgid "Server Uptime"
+msgstr"サーバーの起動時間"
+msgid "Time Playing"
+msgstr"総再生時間"
+msgid "Total Playtime"
+msgstr"データベースの総演奏時間"
+msgid "Last DB Update"
+msgstr"データベースの更新日時"
 
 msgid "Connection"
 msgstr "接続"
