add device enable/disable option.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -99,6 +99,12 @@ msgid "Not Connected"
 msgstr "接続していません"
 msgid "Connect"
 msgstr "接続する"
+msgid "Volume"
+msgstr "音量"
+msgid "Crossfade"
+msgstr "クロスフェード"
+msgid "Device"
+msgstr "デバイス"
 msgid "Lyrics"
 msgstr "歌詞"
 msgid "Download Lyric"
