fix bug: spinctrl can not set 0 when init. fix lang file.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -103,7 +103,7 @@ msgid "Volume"
 msgstr "音量"
 msgid "Crossfade"
 msgstr "クロスフェード"
-msgid "Device"
+msgid "Devices"
 msgstr "デバイス"
 msgid "Lyrics"
 msgstr "歌詞"
