catch server error and show notification on linux.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -167,3 +167,7 @@ msgstr "ジャンル"
 msgid "id"
 msgstr "id"
 
+msgid "MPD Server Error (%s)"
+msgstr "MPD サーバーエラー (%s)"
+msgid "problems opening audio device"
+msgstr "オーディオデバイスが使えません"
