add artwork download option in preferences.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -105,6 +105,10 @@ msgid "Crossfade"
 msgstr "クロスフェード"
 msgid "Devices"
 msgstr "デバイス"
+msgid "Artwork"
+msgstr "アートワーク"
+msgid "Download Artwork"
+msgstr "アートワークをダウンロードする"
 msgid "Lyrics"
 msgstr "歌詞"
 msgid "Download Lyric"
