mod: lastfm api format returns.
add i18n strings.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -122,6 +122,10 @@ msgid "Remove"
 msgstr "削除"
 msgid "Edit..."
 msgstr "編集..."
+msgid "Download Artwork..."
+msgstr "アートワークをダウンロード..."
+msgid "Download Artwork: %s"
+msgstr "アートワークをダウンロード: %s"
 msgid "Download..."
 msgstr "ダウンロード..."
 msgid "Edit Lyric: %s"
@@ -136,6 +140,15 @@ msgid "Timetag"
 msgstr "タイムタグ"
 msgid "Search"
 msgstr "検索"
+msgid "Searching"
+msgstr "検索中"
+msgid "%i Items Found"
+msgstr "%i個見つかりました"
+msgid "No Items Found"
+msgstr "見つかりませんでした"
+msgid "Downloading"
+msgstr "ダウンロード中"
+
 
 msgid "General Info"
 msgstr "一般情報"
