add notify option in preferences.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -115,6 +115,12 @@ msgid "Download Lyric"
 msgstr "歌詞をダウンロードする"
 msgid "Download from %s"
 msgstr "%s からダウンロードする"
+msgid "Notification"
+msgstr "通知"
+msgid "Notify System"
+msgstr "通知システム"
+msgid "Test"
+msgstr "テスト"
 
 msgid "Get Info"
 msgstr "情報を見る"
