translate menubar radiomenu songlist/songalbumlist.

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -48,8 +48,12 @@ msgid "Library"
 msgstr "ライブラリ"
 msgid "Lyric"
 msgstr "歌詞"
+msgid "Songlist"
+msgstr "曲リスト"
 msgid "Albumlist"
 msgstr "アルバムリスト"
+msgid "SongAlbumlist"
+msgstr "曲/アルバムリスト"
 msgid "Info"
 msgstr "情報パネル"
 msgid "Focus Current Song"
