--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -46,14 +46,16 @@ msgid "Playlist"
 msgstr "プレイリスト"
 msgid "Library"
 msgstr "ライブラリ"
+msgid "SongList"
+msgstr "Songリスト"
+msgid "SongAlbumList"
+msgstr "Song/Albumリスト"
+msgid "AlbumView"
+msgstr "Albumリスト"
+msgid "SongListFilter"
+msgstr "Songリストフィルタ"
 msgid "Lyric"
 msgstr "歌詞"
-msgid "Songlist"
-msgstr "曲リスト"
-msgid "Albumlist"
-msgstr "アルバムリスト"
-msgid "SongAlbumlist"
-msgstr "曲/アルバムリスト"
 msgid "Info"
 msgstr "情報パネル"
 msgid "Focus Current Song"
