rename album/song to list and grid

--- a/locale/ja/LC_MESSAGES/music-controller.pot
+++ b/locale/ja/LC_MESSAGES/music-controller.pot
@@ -46,14 +46,14 @@ msgid "Playlist"
 msgstr "プレイリスト"
 msgid "Library"
 msgstr "ライブラリ"
-msgid "SongList"
-msgstr "Songリスト"
-msgid "SongAlbumList"
-msgstr "Song/Albumリスト"
-msgid "AlbumView"
-msgstr "Albumリスト"
-msgid "SongListFilter"
-msgstr "Songリストフィルタ"
+msgid "List"
+msgstr "リスト"
+msgid "List Grid"
+msgstr "リスト+グリッド"
+msgid "Grid"
+msgstr "グリッド"
+msgid "ListFilter"
+msgstr "リストフィルタ"
 msgid "Lyric"
 msgstr "歌詞"
 msgid "Info"
